Minor fix for navbar, app logo & favicon, dark mode set by default

--- a/src/index.css
+++ b/src/index.css
@@ -7,30 +7,36 @@
   .main-container {
     @apply dark:bg-bgDarkPrimary h-[100vh] pt-32 sm:pt-24 sm:ml-56 text-black dark:text-white transition-all duration-500
   }
+
   .nav-button {
     @apply bg-gradient-to-r from-cyan-300 to-sky-300 hover:from-cyan-400 hover:to-sky-400 dark:from-zinc-700 dark:to-zinc-800 dark:hover:from-zinc-800 dark:hover:to-zinc-900 hover:cursor-pointer shadow-md shadow-zinc-600 dark:shadow-black px-2 py-2 rounded-md text-sm text-center
   }
+
   .login-button {
     @apply font-semibold flex gap-3 items-center justify-between bg-gradient-to-r from-teal-200 to-cyan-200 hover:from-teal-300 hover:to-cyan-300 dark:from-zinc-700 dark:to-zinc-800 dark:hover:from-zinc-800 dark:hover:to-zinc-900 hover:cursor-pointer shadow-md shadow-sky-900 dark:shadow-black px-2 py-1 lg:px-5 lg:py-2 rounded-full lg:rounded-lg text-sm lg:text-base text-center
   }
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 6px;
-}
+@media screen and (min-width: 1024px) {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #cacaca;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #cacaca;
+    box-shadow: inset 0 0 5px #cacaca;
+  }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #9a9a9a;
-}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #9a9a9a;
+    border-radius: 20rem;
+  }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #5a5a5a;
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #5a5a5a;
+  }
 }
